--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,7 @@ h6{
 }
 
 .button{
+	text-decoration: none;
 	margin-left:auto;
 	margin-right:auto;
 	background-color:#7f345d;
@@ -156,5 +157,13 @@ h6{
 	text-transform: uppercase;
 	font-family: Montserrat;
 	font-weight: 400;
+	
+}
 
+a{
+	text-decoration:none;
+}
+
+.button:hover{
+	background-color: #964973;
 }
