--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,14 @@ table{
     color: #c95854;
 }
 
-h3{
+.menu-container p {
+	font-family: Volkohn;
+	font-style: italic;
+	color: #c95854;
+	font-size: 16px;
+}
+
+h3 {
 	font-family:Montserrat;
 	font-size:30px;
 	color:white;
@@ -129,7 +136,7 @@ h3{
 	text-transform: uppercase;
 }
 
-h6{
+h6 {
 	font-family:Volkohn;
 	font-size:18px;
 	color:#0f1230;
@@ -138,12 +145,12 @@ h6{
 	margin-bottom:-25px;
 }
 
-.text{
+.text {
 	font-family: Nunito;
 	font-size: 16px;
 }
 
-.button{
+.button {
 	text-decoration: none;
 	margin-left:auto;
 	margin-right:auto;
@@ -160,11 +167,11 @@ h6{
 	
 }
 
-a{
+a {
 	text-decoration:none;
 }
 
-.button:hover{
+.button:hover {
 	background-color: #964973;
 }
 
