--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,9 @@ h2{
 	color:white;
 	font-weight: 400;
 	font-style: Italic;
+	margin-left:80px;
+	margin-top:-150px;
+	position:absolute;
 }
 
 h3 {
@@ -81,8 +84,12 @@ h6 {
 	background-color: #0f1230;
 }
 
+.section.clients {
+	background-color: #ededed;
+}
+
 @media screen and (max-width: 480px) {
-	.section p {
+	.section h1 {
 		width: 70%;
 		font-size: 30px;
 	}
@@ -95,25 +102,18 @@ h6 {
     z-index: 1;
 }
 
-.section-name{
-	font-family: Volkhov;
-	font-weight: 400;
-	color:white;
-	font-size:15px;
-	margin-left:80px;
-	letter-spacing:2px;
-	padding-bottom:100px;
-}
-
 .box{
 	width:200px;
 	height:300px;
 	margin-left:58px;
 }
 
-ul.servicios{
+.servicios{
+	position:absolute;
 	list-style-type:square;
 	color:white;
+	left:0;
+	margin-left:55px;
 }
 
 .section.proceso{
@@ -171,6 +171,7 @@ table{
 }
 
 .button {
+
 	text-decoration: none;
 	margin-left:auto;
 	margin-right:auto;
@@ -200,12 +201,6 @@ a {
 	text-align:center;
 }
 
-.clientes{
-	padding-top:300px;
-	background-color:red;
-	height:1000px;
-}
-
 .buttonwhite {
 	margin-left:auto;
 	margin-right:auto;
@@ -218,4 +213,30 @@ a {
 	font-weight: 400;
 	padding:15px;
 	width:80px;
+}
+
+li{
+	font-size:11px;
+	text-transform: uppercase;
+	line-height: 30px
+}
+
+.section.mainproceso{
+	background-image: url('../img/proceso-img.png');
+}
+
+.section.mainnosotros{
+	background-image: url('../img/nosotroscontent-img.png');
+}
+
+.center{
+	width:30%;
+	text-align:center;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.section.procesocontent{
+	background-color: #ededed;
+	text-align:center;
 }
