--- a/css/main.css
+++ b/css/main.css
@@ -229,12 +229,15 @@ a {
 	font-family: Volkohn;
 	font-style: italic;
 	font-size: 16px;
-	padding-left: 6%;
+	padding-left: 6.5%;
+	padding-top: 12%;
 	width: 6%;
+	float: left;
 }
 
 .client-container{
 	padding-left: 24%;
+	padding-top: 13%;
 }
 
 .cliente1:hover {
