--- a/css/main.css
+++ b/css/main.css
@@ -138,8 +138,21 @@ table{
 .ilust{
 	height:350px;
 	width:auto;
-	margin-right:20px;
+	display:inline-block;
 }
+
+.pasos{
+	margin-left: 0;
+	margin-right: 0;
+	background-color:white;
+}
+
+.contentpasos{
+	text-align: center;
+	width:30%;
+	display: inline-block;
+}
+
 .slidebar a, .slidebar p {
 	color: white;
 }
@@ -296,9 +309,6 @@ li{
 	text-align:center;
 }
 
-.section.pasos {
-	background-color:white;
-}
 
 .footer-conocenos {
 	text-transform: uppercase;
@@ -351,4 +361,18 @@ li{
 .three {
 	width: 33.33%;
 	float: left;
+}
+
+.inline{
+	float:left;
+	display:inline-block;
+}
+
+.h-center{
+	text-align: center
+}
+
+.h-center div{
+	margin-top:200px;
+	text-align: left;
 }
