--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
 	font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-h1{
+h1 {
 	color: white;
 	font-size: 55px;
 	width: 50%;
@@ -12,7 +12,7 @@ h1{
 	text-align: center;
 }
 
-h2{
+h2 {
 	font-family:Volkohn;
 	font-size:16px;
 	color:white;
@@ -32,7 +32,7 @@ h3 {
 	margin-bottom:-35px;
 }
 
-h4{
+h4 {
 	font-family: Montserrat;
 	font-weight: 700;
 	color: #0f1230;
@@ -40,7 +40,7 @@ h4{
 	text-transform: uppercase;
 }
 
-h5{
+h5 {
 	font-family:Volkohn;
 	font-size:18px;
 	color:white;
@@ -373,10 +373,6 @@ li{
 	display:inline-block;
 }
 
-.h-center{
-	text-align: center
-}
-
 .row {
 	height: 480px;
 }
@@ -401,19 +397,19 @@ li{
 	float: left;
 }
 
-.h-center div{
-	margin-top:200px;
+/*.row .text h1 {
 	text-align: left;
-}
-
-.numbers {
-	text-align: left;
-	margin:0;
+	margin: 0;
 	margin-bottom:-50px;
 	color:#0f1230 ;
-	margin-top: -65px;
+	margin-top: 0px;
+	font-family: Montserrat;
 }
 
-.text1 {
-	margin-top: -19px;
+.row .text h3 {
+	margin-top: -34px;
 }
+
+.row .text div {
+	margin-top: 44px;
+}*/
