--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
 	font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-h1 {
+.section.main h1 {
 	color: white;
 	font-size: 55px;
 	width: 50%;
@@ -12,7 +12,7 @@ h1 {
 	text-align: center;
 }
 
-h2 {
+.section.services h2 {
 	font-family:Volkohn;
 	font-size:16px;
 	color:white;
@@ -23,7 +23,7 @@ h2 {
 	position:absolute;
 }
 
-h3 {
+#content h3 {
 	font-family:Volkohn;
 	font-size:18px;
 	color:#0f1230;
@@ -32,7 +32,7 @@ h3 {
 	margin-bottom:-35px;
 }
 
-h4 {
+#content h4 {
 	font-family: Montserrat;
 	font-weight: 700;
 	color: #0f1230;
@@ -40,7 +40,7 @@ h4 {
 	text-transform: uppercase;
 }
 
-h5 {
+.section.nosotros h5 {
 	font-family:Volkohn;
 	font-size:18px;
 	color:white;
@@ -55,6 +55,16 @@ h6 {
 	color: white;
 	font-size: 30px;
 	text-transform: uppercase;
+}
+
+.section.mainnosotros h1{
+	color: white;
+	font-size: 55px;
+	width: 50%;
+	text-transform: uppercase;
+    margin-right: auto;
+    margin-left: auto;
+	text-align: center;
 }
 
 .conocenos {
@@ -90,6 +100,34 @@ h6 {
 
 .section.services {
 	background-color: #0f1230;
+}
+
+.text h1 {
+	color: black;
+	font-size: 55px;
+	width: 50%;
+	text-transform: uppercase;
+    margin-right: auto;
+	font-family: Montserrat;
+}
+
+
+.text h4 {
+	font-family: Montserrat;
+	font-weight: 700;
+	color: #0f1230;
+	font-size: 30px;
+	text-transform: uppercase;
+	margin-top: -36px;
+}
+
+.text h3 {
+	font-family:Volkohn;
+	font-size:18px;
+	color:#0f1230;
+	font-weight: 300;
+	font-style: italic;
+	margin-top:-25px;
 }
 
 @media screen and (max-width: 480px) {
@@ -185,7 +223,6 @@ table{
 .text {
 	font-family: Nunito;
 	font-size: 16px;
-	margin-top: 43px;
 }
 
 .button {
@@ -213,7 +250,7 @@ a {
 	background-color: #964973;
 }
 
-.nosotros{
+.nosotros {
 	background-image: url('../img/nosotros-img.png');
 	height:500px;
 	text-align:center;
@@ -375,6 +412,8 @@ li{
 
 .row {
 	height: 480px;
+	display: inline-block;
+	margin: 0;
 }
 
 .row .image {
@@ -382,6 +421,7 @@ li{
 	height: 100%;
 	background-size: cover;
 	float: left;
+	display: inline-block;
 }
 
 .row:nth-of-type(1) .image {
