--- a/css/main.css
+++ b/css/main.css
@@ -705,32 +705,65 @@ margin-bottom:-35px;
 
 /*Servicios*/
 
-#listaDeServicios{
+.listado {
+ display:inline-block;
+}
+
+.listado #servicio {
+ vertical-align: middle;
+ font-family: 'Montserrat';
+ font-weight: '700';
  color:white;
- text-transform: uppercase;
  font-size:11px;
+ text-transform: uppercase;
  cursor:pointer;
  line-height: 20px;
- display:inline-block;
+ margin-right:200px;
 }
 
-#imgServicios{
- margin-left:200px;
- color:red;
- display:inline-block;
+.showimage {
+ vertical-align: middle;
+ display: inline-block;
+ width:250px;
+ height:auto;
+ margin-right: 200px;
 }
 
-#contenidoServicios{
+.showcontent {
+ vertical-align: middle;
+ display: inline-block;
+ width:600px;
+ height:200px;
+}
+
+.title{
+ font-family:'Montserrat';
+ font-weight:700;
  color:white;
- font-family: 'Nunito';
- font-size:13px;
- display:inline-block;
- width:200px;
- margin-left:200px;
+ font-size:70px;
 }
 
-#listaDeServicios:focus{
- color:red;
+.subtitle {
+ font-family:'Montserrat';
+ font-weight:700;
+ color:white;
+ font-size:40px;
+ margin-top: -10px;
+ text-transform: uppercase;
+}
+
+.content {
+ width:250px;
+font-family: 'Nunito';
+font-weight: 300;
+color:white;
+font-size: 16px;
+}
+
+.sectionscontainer{
+ margin:0 auto;
+ width:1400px;
+ background-color: red;
 }
 
 .people{
