--- a/css/main.css
+++ b/css/main.css
@@ -538,6 +538,18 @@ li{
  position:absolute;
 }
 
+.title-servicios {
+ color:white;
+ font-family: Volkohn;
+ font-style: italic;
+ font-size: 16px;
+ padding-left: 6.5%;
+ top:20%;
+ width: 6%;
+ float: left;
+ position:absolute;
+}
+
 .clients{
  height:75%;
  background-color: #ededed;
@@ -707,6 +719,7 @@ margin-bottom:-35px;
 
 .listado {
  display:inline-block;
+ vertical-align: middle;
 }
 
 .listado #servicio {
@@ -721,12 +734,20 @@ margin-bottom:-35px;
  margin-right:200px;
 }
 
+.listado #servicio:hover {
+ color:#c75156;
+}
+
+.listado #sercio:active{
+ color:#c75156;
+}
+
 .showimage {
  vertical-align: middle;
  display: inline-block;
  width:250px;
  height:auto;
- margin-right: 200px;
+ margin-right: 150px;
 }
 
 .showcontent {
@@ -750,6 +771,7 @@ margin-bottom:-35px;
  font-size:40px;
  margin-top: -10px;
  text-transform: uppercase;
+ margin-bottom:20px;
 }
 
 .content {
@@ -763,7 +785,6 @@ font-size: 16px;
 .sectionscontainer{
  margin:0 auto;
  width:1400px;
- background-color: red;
 }
 
 .people{
