--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:768px) {
+@media screen and (min-width:480px) and (max-width:768px) {
 
 body {
  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -12,8 +12,8 @@ h1{
 
 .section.main h1 {
  color: white;
- font-size: 55px;
- width: 50%;
+ font-size: 40px;
+ width: 70%;
  text-transform: uppercase;
  margin-right: auto;
  margin-left: auto;
