--- a/css/mobile.css
+++ b/css/mobile.css
@@ -100,7 +100,7 @@
  }
  .section.mainnosotros h1 {
   color: white;
-  font-size: 55px;
+  font-size: 25px;
   width: 50%;
   text-transform: uppercase;
   margin-right: auto;
@@ -229,18 +229,24 @@
   padding: 50px;
   vertical-align: middle;
   font-family: 'Nunito';
-  font-size: 16px;
+  font-size: 11px;
  }
  .textnosotros h1 {
   font-family: 'Montserrat';
-  margin-bottom: -50px;
+  margin-bottom: -30px;
   color: black;
-  font-size: 55px;
+  font-size: 30px;
+ }
+ .textnosotros h3 {
+  margin-top:-20px;
  }
  .textnosotros h4 {
   font-family: 'Montserrat';
   color: black;
-  font-size: 30px;
+  font-size: 20px;
+ }
+ .textnosotros p{
+  margin-top:-5px;
  }
  .textproceso {
   font-family: 'Nunito';
@@ -263,6 +269,23 @@
   font-weight: 400;
   cursor: pointer;
   margin-top: -100px;
+ }
+ .unetebtn {
+  text-decoration: none;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #7f345d;
+  width: 60px;
+  padding: 12px;
+  border-radius: 5px;
+  text-align: center;
+  color: white;
+  font-size: 9px;
+  text-transform: uppercase;
+  font-family: Montserrat;
+  font-weight: 400;
+  cursor: pointer;
+  margin-top: -50px;
  }
  a {
   text-decoration: none;
@@ -392,6 +415,9 @@
  }
  .stepcontainer{
   display: inline-block;
+ }
+ .uscontainer{
+  display: table;
  }
  .contentleft{
   float:none;
@@ -548,15 +574,15 @@
   margin-top: 15%;
  }
  .row .image {
-  float: left;
+  float: none;
   display: inline-block;
-  width: 60%;
-  height: 100%;
+  width: 100%;
+  height: 200px;
   background-size: cover;
  }
  .contenidoTexto {
-  float: left;
-  width: 40%;
+  float: none;
+  width: 100%;
   display: inline-block;
  }
  .row .text {
@@ -704,21 +730,22 @@
   width: 75%;
   display: block;
   margin: 0 auto;
+  margin-bottom: 35px;
  }
  .rowpeople h1 {
   margin-top: 80px;
-  margin-bottom: 80px;
+  margin-bottom: 50px;
+  font-size:20px;
  }
  .person h1 {
-  font-size: 20px;
+  font-size: 15px;
   margin-top: 10px;
-  margin-bottom: 0;
  }
  .person h3 {
   color: white;
   font-size: 15px;
-  margin: 0;
-  margin-top: 10px;
+  margin-top: -45px;
+  margin-bottom: -5px;
  }
  .person .text {
   margin-top: 0;
@@ -735,14 +762,23 @@
   color: white;
   text-align: center;
   display: inline-block;
-  margin: 20px;
-  width: 250px;
+  width: 150px;
   height: 250px;
+  margin-top:20px;
  }
- .person .unete h1 {
-  font-size: 30px;
-  margin-top: 25px;
-  margin-bottom: 20px;
+ .person img{
+  width:100px;
+ }
+ .unetecontainer {
+  vertical-align: middle;
+  color: white;
+  text-align: center;
+  display: inline-block;
+  width: 150px;
+ }
+ .unete h1 {
+  font-size: 20px;
+  margin-top: 40px;
  }
  .container50 .text h3 {
   margin-bottom: -20px;
